--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0% 20%;
+  margin: 0% 10%;
 }
 
 code {
@@ -33,4 +33,10 @@ h3 {
 
 a{
   color: rgba(56, 56, 56, 56);
+}
+
+@media only screen and (min-device-width: 200px) and (max-device-width: 1024px){
+  body{
+    margin: 0% 0.5%;
+  }
 }
